Street Epistemology web site

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -275,8 +275,18 @@
         and are often studied in psychology and behavioral economics.</q>
         Most of these biases have articles of their own.
       </li>
+      <li>
+        <a href="https://streetepistemology.com/">Street Epistemology</a>:
+        website inspired by Peter Boghossian's book <i class="booktitle">A Manual for Creating Atheists</i>,
+        which introduced the term &lduo;street epistemology&rdquo;. The website's homepage presents the following definition of the term:
+        <blockquote><p><dfn style="font-weight: bold;">Street Epistemology</dfn> (<abbr>SE</abbr>) is the application of epistemology (the study of knowledge) outside of formal academic contexts.</p></blockquote>
+        The website's aim is to help
+        <q>create and empower 10,000 Street Epistemologists. The people on this page are committed to helping others lead more reflective lives with less reliance on unreliable epistemology.</q>
+        In order to get started with street epistemology, see the site's
+        <a href="https://www.streetepistemology.com/resources/">resources</a>.
+      </li>
       <li>The Fallacy Files:
-        <a href="http://www.fallacyfiles.org/taxonomy.html">Taconomy of Logical Fallacies</a>.
+        <a href="http://www.fallacyfiles.org/taxonomy.html">Taxonomy of Logical Fallacies</a>.
       </li>
       <li>The Skeptic's Guide to the Universe:
         <a href="http://www.theskepticsguide.org/resources/logical-fallacies">Logical Fallacies</a>.
