Puett: Best books on Chinese philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1424,6 +1424,15 @@
         <i class="booktitle">Middlemarch</i> and <i class="booktitle">Moby-Dick</i>
         <q>grew out of their authors’ preoccupations with Spinoza.</q>
       </li>
+      <li>Puett, Michael:
+        <a href="https://fivebooks.com/best-books/michael-puett-chinese-philosophy/">The Best Books on Chinese Philosophy</a>,
+        <i class="website">Five Books</i>, March 2018. Puett recommends the following books:
+        <i class="booktitle">Analects</i> by Confucius, 
+        <i class="booktitle">Daodejing</i> by Laozi, 
+        <i class="booktitle">Essential Writings of Zhuangzi</i>, 
+        <i class="booktitle">Mengzi: With Selections from Traditional Commentaries</i> and 
+        <i class="booktitle">Xunzi</i>.
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
