Ratner: How to disagree well (Big Think)

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -333,6 +333,10 @@
         <a href="http://www.abc.es/ciencia/20150626/abci-gente-piensa-descubren-201506261119.html" hreflang="es" lang="es">Un 90% de la población mundial no sabe pensar</a>,
         <i class="website"><abbr>ABC</abbr></i>, 26.06.2015.
       </li>
+      <li>Ratner, Paul
+        <a href="http://bigthink.com/paul-ratner/how-to-disagree-well-7-of-the-best-and-worst-ways-to-argue">How to disagree well: 7 of the best and worst ways to argue</a>,
+        <i class="website">Big Think</i>, 16.03.2018.
+      </li>
       <li lang="de">Rodewald, Bernd:
         <i class="booktitle">Ihr Wegweiser zu rationalen Analysen und Entscheidungen. Wie man Fehler vermeidet und die richtigen Schlüsse zieht</i>.
         Wiley-<abbr>VCH</abbr> Verlag, 2017.
