C. Hamilton: Silent Invasion: China's Influence ...

--- a/lijst.html
+++ b/lijst.html
@@ -351,6 +351,13 @@
       <a href="https://www.penguin.co.uk/books/1085201/treasure-islands/9780099541721/"><abbr>ISBN</abbr> 978 0099541721</a>.
       <!-- Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
     </li>
+    <li>Hamilton, Clive:
+      <i class="booktitle">Silent Invasion: China's Influence in Australi</i>. Hardle Grant, 2018. (376 pages)
+      <a href="http://www.hardiegrant.com/au/publishing/bookfinder/book/silent-invasion-by-clive-hamilton/9781743794807"><abbr>ISBN</abbr> 9781743794807</a>.
+      <br />See also
+      China Uncensored: <a href="https://www.youtube.com/watch?v=E5vUaCj0QGI">China's Growing Influence on the West and Its Politics</a> (YouTube, 24 minutes, 23.03.2018) and
+      Andrew Podger: <a href="https://theconversation.com/book-review-clive-hamiltons-silent-invasion-chinas-influence-in-australia-93650">Book review – Clive Hamilton’s Silent Invasion: China’s Influence in Australia</a> (<i class="website">The Conversation</i>, 21.03.2018).
+    </li>
   </ul>
 
   <p>The impending end or crisis of capitalism:</p>
