Gutting: best book on Foucault

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1433,6 +1433,18 @@
         <i class="booktitle">Mengzi: With Selections from Traditional Commentaries</i> and 
         <i class="booktitle">Xunzi</i>.
       </li>
+      <li>Gutting, Gary:
+        <a href="https://fivebooks.com/best-books/gary-gutting-foucault-best-books/">The best books on Foucault</a>,
+        <i class="website">Five Books</i> (no date). Garry Gutting is the author of
+        <i class="booktitle">Foucault: A Very Short Introduction</i> (Oxford University Press, 2005,
+        <a href="https://global.oup.com/academic/product/foucault-a-very-short-introduction-9780192805577"><abbr>ISBN</abbr> 9780192805577</a>).
+        Gutting recommends the following books:
+        <i class="booktitle">How to Read Foucault</i> (2007) by Johanna Oksala,
+        <i class="booktitle">The Philosophy of Foucault</i> (2006) by Todd May,
+        <i class="booktitle">Bodies and Pleasures: Foucault and the Politics of Sexual Normalization</i> (1999) by Ladelle McWhorter,
+        <i class="booktitle">The Cambridge Foucault Lexicon</i> (2014) and
+        <i class="booktitle">The Lives of Michel Foucault</i> (1993) by David Macey.
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
