+ Books about machine learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -494,6 +494,20 @@
       </li>
     </ul>
 
+    <p>Books:</p>
+    <ul>
+      <li>Alpaydin, Ethem:
+        <i class="booktitle">Machine Learning: The New <abbr>AI</abbr></i>. Essential Knowledge. <abbr>MIT</abbr> Press, October 2016. (224 pages)
+        <a href="https://mitpress.mit.edu/books/machine-learning-1"><abbr>ISBN</abbr> 9780262529518</a>.
+        <br />A concise introduction that does not require any programming.
+      </li>
+      <li>Brink, Henrik; Richards, Joseph W.; Fetherolf, Mark:
+        <i class="booktitle">Real-World Machine Learning</i>. Manning Publications, September 2016. (264 pages)
+        <a href="https://www.manning.com/books/real-world-machine-learning"><abbr>ISBN</abbr> 9781617291920</a>.
+        <br />This book does not assume any prior knowledge of machine learning, but readers should know Python.
+      </li>
+    </ul>
+
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
     <ul>
       <li>Horgan, Lydie:
