--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -586,6 +586,10 @@
         <i class="booktitle">Mimesis and Science: Empirical Research on Imitation and the Mimetic Theory of Culture and Religion</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2011. (272 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3C40"><abbr>ISBN</abbr> 9781611860238</a>.
       </li>
+      <li>Oughourlian, Jean-Michel:
+        <i class="booktitle">The Mimetic Brain</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2016. (228 pages)
+        <a href="http://msupress.org/books/book/?id=50-1D0-3F7D"><abbr>ISBN</abbr> 9781611861891</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
