Adamson: best book on phil in islamic world

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1433,6 +1433,19 @@
         <i class="booktitle">Mengzi: With Selections from Traditional Commentaries</i> and 
         <i class="booktitle">Xunzi</i>.
       </li>
+      <li>Adamson, Peter:
+        <a href="https://fivebooks.com/best-books/peter-adamson-philosophy-islamic-world/">The Best Books on Philosophy in the Islamic World</a>,
+        <i class="website">Five Books</i>, March 2018. Adamson recommends the following books:
+        <i class="booktitle">Greek Thought, Arabic Culture: the Graeco-Arabic Translation Movement in Baghdad and Early Society</i> by Dimitri Gutas 
+        (<a href="https://www.routledge.com/Greek-Thought-Arabic-Culture-The-Graeco-Arabic-Translation-Movement-in/Gutas/p/book/9780415061339">Routledge, 1998</a>), 
+        <i class="booktitle">Avicenna</i> (2010) by Jon McGinnis, 
+        <i class="booktitle"> Avicenna’s De anima in the Latin West. The Formation of a Peripatetic Philosophy of the Soul 1160- 1300</i> by Dag Nikolaus Hasse
+        (<a href="https://www.warburg.sas.ac.uk/publications/warburg-studies-and-texts">Warburg Institute</a>, 2000),
+        <i class="booktitle">Maimonides in His World: Portrait of a Mediterranean Thinker</i> (2009) by Sarah Stroumsa and
+        <i class="booktitle">The Teleological Ethics of Fakhr al-Dīn al-Rāzī</i> by Ayman Shihadeh
+        (<a href="https://brill.com/view/title/11560">Brill, 2006</a>).
+        <!--@@also check Adamson's own books-->
+      </li>
       <li>Gutting, Gary:
         <a href="https://fivebooks.com/best-books/gary-gutting-foucault-best-books/">The best books on Foucault</a>,
         <i class="website">Five Books</i> (no date). Garry Gutting is the author of
