Sugomori: Java Deep Learning Essentials

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -506,6 +506,12 @@
         <a href="https://www.manning.com/books/real-world-machine-learning"><abbr>ISBN</abbr> 9781617291920</a>.
         <br />This book does not assume any prior knowledge of machine learning, but readers should know Python.
       </li>
+      <li>Sugomori, Yusuke:
+        <i class="booktitle">Java Deep Learning Essentials</i>. Packt, 2016. (254 pages)
+        <a href="https://www.packtpub.com/big-data-and-business-intelligence/java-deep-learning-essentials"><abbr>ISBN</abbr> 9781785282195</a>.
+        <br />This book does not assume prior knowledge of machine learning; the concepts are introduced using Java 8 and the open source
+        <a href="https://deeplearning4j.org/">DeepLearning4J library</a>.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
