Palaver: Der mimetische Zirkel

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -590,6 +590,10 @@
         <i class="booktitle">The Mimetic Brain</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2016. (228 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3F7D"><abbr>ISBN</abbr> 9781611861891</a>.
       </li>
+      <li lang="de">Palaver, Wolfgang:
+        <a href="https://www.uibk.ac.at/theol/leseraum/texte/631.html">Der mimetische Zirkel (Gewalt und der "Gott der Opfer")</a>.
+        <i class="journal">Lernort Gemeinde. Zeitschrift für theologische Praxis</i>, 24/1 (2006): 17-20.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
