Haidt: The Righteous Mind

--- a/lijst.html
+++ b/lijst.html
@@ -461,6 +461,10 @@
       Cannongate Books, 2014. (273 pages)
       <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.
     </li>
+    <li>Haidt, Jonathan:
+      <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013.
+      <a href="https://www.penguin.co.uk/books/56726/the-righteous-mind/9780141039169/"><abbr>ISBN</abbr> 9780141039169</a>.
+    </li>
   </ul>
 
   <h2>Various Other Topics</h2>
