Géron: Hands-On Machine Learning with ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -512,6 +512,11 @@
         <br />This book does not assume prior knowledge of machine learning; the concepts are introduced using Java 8 and the open source
         <a href="https://deeplearning4j.org/">DeepLearning4J library</a>.
       </li>
+      <li>Géron, Aurélien:
+        <i class="booktitle">Hands-On Machine Learning with Scikit-Learn and TensorFlow</i>. O'Reilly, March 2017. (572 pages)
+        <a href="http://shop.oreilly.com/product/0636920052289.do"><abbr>ISBN</abbr> ?</a>.
+        <br />See also the author's <a href="https://github.com/ageron/handson-ml">handson-ml repository on GitHub</a>.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
