Palaver & Schenk: Mimetic Theory and World Rel...

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -594,6 +594,11 @@
         <a href="https://www.uibk.ac.at/theol/leseraum/texte/631.html">Der mimetische Zirkel (Gewalt und der "Gott der Opfer")</a>.
         <i class="journal">Lernort Gemeinde. Zeitschrift für theologische Praxis</i>, 24/1 (2006): 17-20.
       </li>
+      <li>Palaver, Wolfgang; Schenk, Richard (editors):
+        <i class="booktitle">Mimetic Theory and World Religions</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2017. (470 pages)
+        <a href="http://msupress.org/books/book/?id=50-1D0-3FE7"><abbr>ISBN</abbr> 9781611862621</a>. 
+        <!--@@other books in the series: http://msupress.org/books/series/?id=Studies+in+Violence%2C+Mimesis%2C+%26+Culture -->
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
