Shukla: Machine Learning with TensorFlow

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -517,6 +517,10 @@
         <a href="http://shop.oreilly.com/product/0636920052289.do"><abbr>ISBN</abbr> ?</a>.
         <br />See also the author's <a href="https://github.com/ageron/handson-ml">handson-ml repository on GitHub</a>.
       </li>
+      <li>Shukla, Nishant:
+        <i class="booktitle">Machine Learning with TensorFlow</i>. Manning Publications, January 2018. (272 pages)
+        <a href="https://www.manning.com/books/machine-learning-with-tensorflow"><abbr>ISBN</abbr> 9781617293870</a>.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
