--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -599,6 +599,10 @@
         <a href="http://msupress.org/books/book/?id=50-1D0-3FE7"><abbr>ISBN</abbr> 9781611862621</a>. 
         <!--@@other books in the series: http://msupress.org/books/series/?id=Studies+in+Violence%2C+Mimesis%2C+%26+Culture -->
       </li>
+      <li>Redekop, Vern Neufeld; Ryba, Thomas (editors):
+        <i class="booktitle">René Girard and Creative Mimesis</i>. Lexington Books, 2013. (342 pages)
+        <a href="https://rowman.com/ISBN/9780739168998/Ren%C3%A9-Girard-and-Creative-Mimesis"><abbr>ISBN</abbr> 978-1-4985-5057-4</a>. 
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
