Van Eeckelen: Waanzin en werk van F. Nietzsche

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -603,6 +603,12 @@
         <i class="booktitle">René Girard and Creative Mimesis</i>. Lexington Books, 2013. (342 pages)
         <a href="https://rowman.com/ISBN/9780739168998/Ren%C3%A9-Girard-and-Creative-Mimesis"><abbr>ISBN</abbr> 978-1-4985-5057-4</a>. 
       </li>
+      <li lang="nl">Van Eeckelen, Kevin:
+        <i class="booktitle">Waanzin en werk van Friedrich Nietzsche: de verklaring van Nietzsches denken vanuit de door Rene Girard geëxpliciteerde wetten van het mimetisme, gekaderd binnen de moderne anti-cultuur</i>. <span lang="en">Brave New Books, 2014 (557 pages)</span>.
+        <abbr>ISBN</abbr> 978-9402113556.
+        <span lang="en">This book is based on the author's doctoral dissertation. See also the 
+        <a href="https://nietzschegirardmimetism.com/">author's website</a>.</span>
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
