Perez: Businessed Need Artificial "Specialist" Intelligence

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -316,6 +316,11 @@
         <a href="https://aeon.co/essays/true-ai-is-both-logically-possible-and-utterly-implausible">Should we be afraid of <abbr>AI</abbr>?</a>,
         <i class="website">Aeon</i>, 09.05.2016 (updated 05.12.2017).
       </li>
+      <li>Perez, Carlos E.:
+        <a href="https://medium.com/intuitionmachine/businesses-need-artificial-specialist-intelligence-not-the-other-kind-b0c285c1586e">Businesses Need Artificial “Specialist” Intelligence, Not the Other Kind</a>,
+        <i class="blog">Intuition Machine (on Medium)</i>, 08.05.2017 (five-minute read).
+        Quote: <q>The reason we insert humans in our businesses is so that common sense will prevail. Unfortunately, the way we’ve mechanized most of our corporations, we know that we’ve thrown out all common sense.</q>
+      </li>
       <li>Lipton, Zachary Chase:
         <a href="https://arxiv.org/abs/1606.03490">The Mythos of Model Interpretability</a>,
         presented at 2016 ICML Workshop on Human Interpretability in Machine Learning (<abbr>WHI</abbr> 2016), New York, <abbr>NY</abbr>.
