Suster: Mark Cuban on Why You Need to Study ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -326,6 +326,16 @@
         presented at 2016 ICML Workshop on Human Interpretability in Machine Learning (<abbr>WHI</abbr> 2016), New York, <abbr>NY</abbr>.
         <!--@@PDF-->
       </li>
+      <li>Suster, Mark:
+        <a href="https://bothsidesofthetable.com/mark-cuban-on-why-you-need-to-study-artificial-intelligence-or-youll-be-a-dinosaur-in-3-years-db3447bea1b4">Mark Cuban on Why You Need to Study Artificial Intelligence or You’ll be a Dinosaur in 3 Years</a>,
+        <i class="blog">Both Sides (on Medium)</i>, 07.02.2017 (five-minute read). Blog post about
+        <a href="https://www.youtube.com/watch?v=RtZ_H_aSTCI">Jason Hirschorn's interview with Mark Cuban</a> 
+        at the Upfront Summit in 2017. Mark Cuban quote:
+        <blockquote cite="https://youtu.be/RtZ_H_aSTCI?t=9m53s">
+          <p>Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years.</p>
+        </blockquote>
+        <!--At 9': "90% percent of my learning is about ... neural networks, ..."-->
+      </li>
       <li>Polonski, Vyacheslav W.:
         <a href="https://theconversation.com/how-artificial-intelligence-conquered-democracy-77675">How artificial intelligence conquered democracy</a>,
         <i class="website">The Conversation</i>, 08.08.2017 (Creative Commons licence).
