Perez: How Automation and AI Strip us ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -336,6 +336,10 @@
         </blockquote>
         <!--At 9': "90% percent of my learning is about ... neural networks, ..."-->
       </li>
+      <li>Perez, Carlos E.:
+        <a href="https://medium.com/intuitionmachine/how-automation-and-artificial-intelligence-strips-us-of-our-humanity-352a9b92b873">How Automation and Artificial Intelligence Strips us of our Humanity</a>,
+        <i class="blog">Intuition Machine (on Medium)</i>, 12.03.2018 (five-minute read).
+      </li>
       <li>Polonski, Vyacheslav W.:
         <a href="https://theconversation.com/how-artificial-intelligence-conquered-democracy-77675">How artificial intelligence conquered democracy</a>,
         <i class="website">The Conversation</i>, 08.08.2017 (Creative Commons licence).
