A Better Life (TheAtheistBook)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -297,6 +297,8 @@
         <a href="https://www.youtube.com/watch?v=EOIXCj-yppU">Atheists Are Perverts &amp; Molesters, Says Ted Cruz's Dad</a>
         (YouTube, 4 minutes, 15.11.2013).
       </li>
+      <li><a href="https://www.theatheistbook.com/">A Better Life: 100 Atheists Speak Out on Joy &amp; Meaning in a World Without God</a>.
+      </li>
     </ul>
 
     <h2>Examples of Outdated Beliefs</h2>
