Fritz Mauthner under der Atheismus

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -289,6 +289,13 @@
         <i class="booktitle">Atheism: What Everyone Needs to Know®</i>. Oxford University Press, 2015. (304 pages)
         <a href="https://global.oup.com/academic/product/atheism-9780199334582"><abbr>ISBN</abbr> 9780199334582</a>.
       </li>
+      <li>
+        <a href="http://www.mauthner-atheismus.de/" hreflang="de" lang="de">Fritz Mauthner und der Atheismus</a>:
+        German website about the Austro-Hungarian novelist and philosopher
+        <a href="https://en.wikipedia.org/wiki/Fritz_Mauthner" lang="de">Fritz Mauthner</a> (1849 – 1923),
+        whose philosophical works include
+        <i class="booktitle" lang="de">Der Atheismus und seine Geschichte im Abendlande</i> (four volumes, 1920–1923).
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
