L'auto-organisation. Colloque de Cerisy, 1981

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -578,6 +578,11 @@
         <i class="booktitle">Tout comprendre avec René Girard. Du moi aux grands problèmes actuels. Petit traité de la violence</i>. L'Hermattan, 2015. (218 pages)
         <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1"><abbr>ISBN</abbr> 978-2-343-05426-1</a>. 
       </li>
+      <li lang="fr">Dumouchel, Paul; Dupuy, Jean-Pierre, <abbr>dir.</abbr>:
+        <i class="booktitle">L'auto-organisation. De la physique au politique</i>. Colloque de Cerisy, 1981. Editions du Seuil, 1983, 1994. (560 pages)
+        <a href="http://www.seuil.com/ouvrage/l-auto-organisation-de-la-physique-au-politique-colloque-de-cerisy/9782020220439" hreflang="fr"><abbr>ISBN</abbr> 9782020220439</a>.
+        <br />(<a href="http://www.ccic-cerisy.asso.fr/autoorgTM83.html" hreflang="fr">Centre Culturel International de Cerisy</a>.)
+      </li>
       <li>Fornari, Giuseppe:
         <i class="booktitle">A God Torn to Pieces: The Nietzsche Case</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2013. (162 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3EFE"><abbr>ISBN</abbr> 9781611861013</a>.
