Chollet: Deep Learning with Python

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -540,6 +540,16 @@
         <i class="booktitle">Machine Learning with TensorFlow</i>. Manning Publications, January 2018. (272 pages)
         <a href="https://www.manning.com/books/machine-learning-with-tensorflow"><abbr>ISBN</abbr> 9781617293870</a>.
       </li>
+      <li>Chollet, François:
+        <i class="booktitle">Deep Learning with Python</i>. Manning Publications, November 2017. (384 pages)
+        <a href="https://www.manning.com/books/deep-learning-with-python"><abbr>ISBN</abbr> 9781617294433</a>.
+      </li>
+      <!--
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
