+h2: Other Links; Les Back

--- a/index.html
+++ b/index.html
@@ -151,6 +151,27 @@
       </li>
     </ul>
 
+    <h2>Other Links</h2>
+    <ul>
+      <li>Back, Les:
+        <a href="https://fivebooks.com/best-books/les-back-academia/">The best books on Academia</a>,
+        <i class="website">Five Books</i>, April 2018. Les Back is the author of
+        <i class="booktitle">Academic Diary: Or Why Higher Education Still Matters</i> 
+        (<a href="https://mitpress.mit.edu/books/academic-diary"><abbr>MIT</abbr> Press, 2016).
+        His recommendations are
+        <i class="booktitle">Killing Thinking: The Death of the Universities</i>
+        (<a href="https://www.bloomsbury.com/us/killing-thinking-9780826488329/">Continuum, 2004</a>) by Mary Evans,
+        <i class="booktitle">Representations of the Intellectual: The Reith Lectures, 1993</i> (1994) by 
+        <a href="https://en.wikipedia.org/wiki/Edward_Said">Edward Said</a>,
+        <i class="booktitle">The Great University Gamble: Money, Markets and the Future of Higher Education</i> 
+        (<a href="https://www.plutobooks.com/9780745332932/the-great-university-gamble/">Pluto Press, 2013</a>)
+        by Andrew McGettigan,
+        <!--See also https://andrewmcgettigan.org/book-the-great-university-gamble/ -->
+        <i class="booktitle">Faculty Towers: The Academic Novel and Its Discontents</i> (2005) by Elaine Showalter,
+        <i class="booktitle">Teaching to Transgress: Education as the Practice of Freedom</i> (1994) by 
+        <a href="https://en.wikipedia.org/wiki/Bell_hooks">bell hooks</a>.
+      </li>
+    </ul>
     <!-- 
       * Robert C. Richardson: Evolutionary Psychology as Maladapted Psychology. Bradford, 2010. (A critical look at evolutionary psychology.)
       * Gisela Kaplan; Lesley Rogers: Gene Worship: Moving Beyond the Nature/ Nurture Debate Over Genes, Brain and Gender. Other Press [?], 2010.
