+h2: Introductions to Ethics; introquote

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -54,18 +54,22 @@
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
+    <blockquote id="introquote">
       <p>
-        <q cite="https://en.wikiquote.org/wiki/Atheism#19th_century_and_later">Until someone claims to see 
-        <a href="https://en.wikipedia.org/wiki/Christopher_Hitchens">Christopher Hitchens'</a> face in a tree stump, 
-        idiots must stop claiming that atheism is a religion. 
-        There's one little difference: Religion is defined as the belief in and worship of a superhuman controlling power, and atheism is — precisely not that. 
-        Got it? <strong>Atheism is a religion like abstinence is a sex position</strong>.</q>
-        <cite>Real Time With Bill Maher (<abbr>HBO</abbr>, 2012-02-03)</cite>
+        <q cite="https://en.wikiquote.org/wiki/Morality#C">As our own species is in the process of proving, one cannot have superior science and inferior morals. The combination is unstable and self-destroying.</q>
+        <!--<q cite="http://www.clarkefoundation.org/about-sir-arthur/sir-arthurs-quotations/">The greatest tragedy in mankind’s entire history may be the hijacking of morality by religion.</q>-->
+        <cite>Arthur C. Clarke (<a href="http://www.clarkefoundation.org/about-sir-arthur/sir-arthurs-quotations/">Arthur C. Clarke Foundation: Sir Arthur’s Quotations</a>) </cite>
       </p>
-    </blockquote-->
+    </blockquote
 
     <p>Temporary page.</p>
+    <h2>Introductions to Ethics</h2>
+    <ul>
+      <li><abbr>BBC</abbr>:
+        <a href="http://www.bbc.co.uk/ethics/introduction/">Introduction to ethics</a>
+        (archived content).
+      </li>
+    </ul>
 
     <h2>Ethics or Morality Without Religion</h2>
     <ul>
