Collins: Twenty-One Reason's Noah's Worldwide ...

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -330,6 +330,10 @@
         <a href="https://www.youtube.com/watch?v=rdDywxDy7YU">Vatican Trains More Exorcists Citing Demon Epidemic</a>
         (YouTube, 4 minutes, 06.03.2018).
       </li>
+      <li>Collins, Lorence G.:
+        <a href="https://www.csicop.org/si/show/twenty-one_reasons_noahs_worldwide_flood_never_happened">Twenty-One Reasons Noah’s Worldwide Flood Never Happened</a>,
+        <i class="magazine">Skeptical Inquirer</i>, 42.2 (March/April 2018).
+      </li>
     </ul>
 
     <!-- 
