--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -575,6 +575,13 @@
         <i class="booktitle">Mimesis, Desire, and the Novel: René Girard and Literary Criticism</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2015. (358 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3F59"><abbr>ISBN</abbr> 9781611861655</a>.
       </li>
+      <li>Bailie, Gil:
+        <i class="booktitle">Violence Unveiled: Humanity at the Crossroads</i>. Crossroad Publishing Company, 1996. (312 pages)
+        <a href="http://www.crossroadpublishing.com/crossroad/title/violence-unveiled"><abbr>ISBN</abbr> 9780824516451</a>.
+        <br />See the <a href="http://girardianlectionary.net/res/vu_accomplished.htm">excerpt from <i class="booktitle">Violence Unveiled</i></a>
+        on Paul Nuechterlein's Girardian Lectionary website.
+        <!--See also http://stmaryvalleybloom.org/violence.html -->
+      </li>
       <li lang="fr">Dubouchet, Paul:
         <i class="booktitle">René Girard, "cow-boy texan". Au fil de ses exploits</i>. L'Hermattan, 2017. (176 pages)
         <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=54094"><abbr>ISBN</abbr> 978-2-343-12503-9</a>. 
