Cioffi: V- Intention and Interpretation

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1473,6 +1473,12 @@
         <i class="blog"><abbr>OUP</abbr> Blog</i>, 11.03.2018.
         <!--@@add titles-->
       </li>
+      <li>Cioffi, Frank:
+        <a href="https://academic.oup.com/aristotelian/article/64/1/85/1805497">V—Intention and Interpretation in Criticism</a>,
+        <i class="journal">Proceedings of the Aristotelian Society</i>, Volume 64, Issue 1, 1 June 1964, Pages 85–106, 
+        <abbr>DOI</abbr>: <a href="https://doi.org/10.1093/aristotelian/64.1.85">https://doi.org/10.1093/aristotelian/64.1.85</a>.
+        (Free <abbbr>PDF</abbbr>.)<!--@@PDF-->
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
