Willis: Literature and Science

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -509,6 +509,11 @@
 
     <h2>Miscellaneous Other Links</h2>
     <ul>
+      <li>Willis, Martin:
+        <i class="booktitle">Literature and Science</i>. Readers' Guides to Essential Criticism. Palgrave&nbsp;/ Macmillan International, 2014. (208 pages)
+        <a href="https://www.macmillanihe.com/page/detail/Literature-and-Science/?K=9780230298187"><abbr>ISBN</abbr> 9780230298194</a>.
+        <!--@@sample chapter-->
+      </li>
       <li>The Gombrich Archive:
         <a href="https://gombrich.co.uk/papers-and-articles/">Papers and articles</a>:
         papers by art historian
