Sleigh: Literature and Science

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -514,6 +514,10 @@
         <a href="https://www.macmillanihe.com/page/detail/Literature-and-Science/?K=9780230298187"><abbr>ISBN</abbr> 9780230298194</a>.
         <!--@@sample chapter-->
       </li>
+      <li>Sleigh, Charlotte:
+        <i class="booktitle">Literature and Science</i>. Outlining Literature. Palgrave, 2010. (224 pages)
+        <a href="https://www.macmillanihe.com/page/detail/Literature-and-Science/?K=9780230218161"><abbr>ISBN</abbr> 9780230218178</a>.
+      </li>
       <li>The Gombrich Archive:
         <a href="https://gombrich.co.uk/papers-and-articles/">Papers and articles</a>:
         papers by art historian
