Peterson: Maps of Meaning.

--- a/lijst.html
+++ b/lijst.html
@@ -465,6 +465,13 @@
       <i class="booktitle">The Righteous Mind: Why Good People are Divided by Politics and Religion</i>. Vintage (Penguin), 2013.
       <a href="https://www.penguin.co.uk/books/56726/the-righteous-mind/9780141039169/"><abbr>ISBN</abbr> 9780141039169</a>.
     </li>
+    <li>Peterson, Jordan B.:
+      <i class="booktitle">Maps of Meaning: The Architecture of Belief</i>. Routledge, 1999. (564 pages)
+      <a href="https://www.routledge.com/Maps-of-Meaning-The-Architecture-of-Belief/Peterson/p/book/9780415922227"><abbr>ISBN</abbr> 9780415922227</a>.
+      <br />See also the Wikipedia article
+      <a href="https://en.wikipedia.org/wiki/Maps_of_Meaning:_The_Architecture_of_Belief">Maps of Meaning: The Architecture of Belief</a>.
+      Peterson also wrote <a href="https://en.wikipedia.org/wiki/12_Rules_for_Life">12 Rules for Life: An Antidote to Chaos</a> (2018).
+    </li>
   </ul>
 
   <h2>Various Other Topics</h2>
