--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -476,6 +476,9 @@
         <a href="https://medium.com/intuitionmachine/how-automation-and-artificial-intelligence-strips-us-of-our-humanity-352a9b92b873">How Automation and Artificial Intelligence Strips us of our Humanity</a>,
         <i class="blog">Intuition Machine (on Medium)</i>, 12.03.2018 (five-minute read).
       </li>
+      <li><a href="https://medium.com/intuitionmachine">Intuition Machine</a>: blog on Medium.
+        <!--Carlos E. Perez, author of 'The Deep Learning AI Playbook': https://gumroad.com/l/WRbUs -->
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
