--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1503,6 +1503,26 @@
       </li>
     </ul>
 
+    <h2>Death</h2>
+    <ul>
+      <li>Critchley, Simon:
+        <i class="booktitle">The Book of Dead Philosophers</i>. Granta Books, 2009. (336 pages)
+        <a href="http://grantabooks.com/The-Book-Of-Dead-Philosophers"><abbr>ISBN</abbr> 9781847080790</a>.
+      </li>
+      <li>O'Mahony, Seamus:
+        <i class="booktitle">The Way We Die Now</i>. Head of Zeus, 2016. (320 pages)
+        <a href="http://headofzeus.com/books/way-we-die-now#tab-paperback"><abbr>ISBN</abbr> 978178497428</a>.
+      </li>
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
 
     <h2>Unsorted Links</h2>
     <ul>
