O'Mahoney: Do doctors die better than philosophers?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1513,6 +1513,10 @@
         <i class="booktitle">The Way We Die Now</i>. Head of Zeus, 2016. (320 pages)
         <a href="http://headofzeus.com/books/way-we-die-now#tab-paperback"><abbr>ISBN</abbr> 978178497428</a>.
       </li>
+      <li>O'Mahony, Seamus:
+        <a href="http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(18)30835-3/fulltext">Do doctors die better than philosophers?</a>,
+        <i class="journal">The Lancet</i>, Volume 391, <abbr>No.</abbr> 10129, <abbr>p</abbr> 1474–1475.
+      </li>
       <!--
       <li>
         <a href=""></a>
