--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1517,6 +1517,10 @@
         <a href="http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(18)30835-3/fulltext">Do doctors die better than philosophers?</a>,
         <i class="journal">The Lancet</i>, Volume 391, <abbr>No.</abbr> 10129, <abbr>p</abbr> 1474–1475.
       </li>
+      <li lang="fr"><!--Volant, Éric:-->
+        <a href="http://agora.qc.ca/thematiques/mort/documents/que_philosopher_cest_apprendre_a_mourir_ciceron" hreflang="fr">«Que philosopher, c'est apprendre à mourir» (Cicéron)</a>,
+        <i class="website">Encyclopédie sur la mort</i>.
+      </li>
       <!--
       <li>
         <a href=""></a>
