La-Philosophie.com: apprendre à mourir ...

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1521,6 +1521,10 @@
         <a href="http://agora.qc.ca/thematiques/mort/documents/que_philosopher_cest_apprendre_a_mourir_ciceron" hreflang="fr">«Que philosopher, c'est apprendre à mourir» (Cicéron)</a>,
         <i class="website">Encyclopédie sur la mort</i>.
       </li>
+      <li lang="fr">
+        <a href="https://la-philosophie.com/philosopher-apprendre-mourir-montaigne" hreflang="fr">Philosopher, c’est apprendre à mourir (Montaigne)</a>,
+        <i class="website">La-Philosophie.com</i>.
+      </li>
       <!--
       <li>
         <a href=""></a>
