'absence of evidence' in rationalwiki.org

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -264,6 +264,12 @@
         <q>Cognitive bias describes the inherent thinking errors 
         that humans make in processing information</q>.
         Many of these biases have articles of their own.
+        Thinking errors include the fallacy that
+        <a href="https://rationalwiki.org/wiki/Absence_of_evidence">absence of evidence is evidence of absence</a>.
+        (For an ilustration, see 
+        <a href="https://www.indy100.com/article/did-jesus-exist-7489786">The historical evidence that Jesus didn't exist</a>,
+        Indy100, 22.12.2016.
+        <!-- The article distorts the title of its source: "Here are 5 reasons to suspect Jesus never existed": https://www.rawstory.com/2016/12/here-are-5-reasons-to-suspect-jesus-never-existed-2/ -->)
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/List_of_cognitive_biases">List of 
