Church of the Flying Spaghetti Monster

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -235,6 +235,8 @@
           </li>
         </ul>
       </li>
+      <li><a href="https://www.venganza.org/">Church of the Flying Spaghetti Monster</a>.
+      </li>
       <li>Daniel Dennett:
         <a href="https://www.youtube.com/watch?v=DTepA-WV_oE">Responding to Pastor Rick Warren</a> 
         (YouTube, 25 minutes): presentation at <abbr>TED</abbr> 2007.
