Luciano Floridi: philosophy of information

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1458,6 +1458,17 @@
         <i class="booktitle">The Cambridge Foucault Lexicon</i> (2014) and
         <i class="booktitle">The Lives of Michel Foucault</i> (1993) by David Macey.
       </li>
+      <li>
+        <a href="https://fivebooks.com/best-books/luciano-floridi-philosophy-information/">Luciano Floridi recommends the best books on the Philosophy of Information</a>,
+        <i class="website">Five Books</i> (no date). The recommendations are the following:
+        <ul>
+          <li><i class="booktitle">Republic</i> by Plato,</li>
+          <li><i class="booktitle">Meditations</i> by René Descartes,</li>
+          <li><i class="booktitle">Critique of Pure Reason</i> by Immanuel Kant (<q>We all know that he couldn’t write, no matter how much he tried.</q>),</li>
+          <li><i class="booktitle">The Essential Turing</i>,</li>
+          <li><i class="booktitle">The Postmodern Condition</i> by Jean-François Lyotard.</li>
+        </ul>
+      </li>
       <li>Monbiot, George:
         <a href="https://fivebooks.com/best-books/george-monbiot-essential-reading-list/">George Monbiot — with An Essential Reading List</a>,
         <i class="website">Five Books</i> (March 2018). Monbiot recommends the following books:
