Science Day December 2014

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -100,9 +100,9 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
         12 December 2014. Topics:
         <ul>
-          <li><span lang="de">Bildsensoren (Johannes Zink</span>, 64 minutes, in German),</li>
-          <li>The Battle Against Typhus (<span lang="nl">Christophe Strobbe</span>, 50 minutes, in English),</li>
-          <li>Alien Life (<span lang="de">Andreas Stiegler</span>, 158 minutes, in German).</li>
+          <li><span lang="de"><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day/Bild%20Sensoren" hreflang="de">Bildsensoren</a> (Johannes Zink</span>, 64 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day/The%20battle%20against%20typhus">The Battle Against Typhus</a> (<span lang="nl">Christophe Strobbe</span>, 50 minutes, in English),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day/Aliens">Alien Life</a> (<span lang="de">Andreas Stiegler</span>, 158 minutes, in German).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
