Democracy Now: Unlimited Wordwide War

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2331,6 +2331,10 @@
         <br />See also: Secular Talk: <a href="https://www.youtube.com/watch?v=Ffz6bUarL20">Trump Admin Announces Indefinite US Occupation Of Syría, Media &amp; Dems Yawn</a>
         (YouTube, 18.01.2018, 19 minutes).
       </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=WgMWq2H6hu4">Unlimited Worldwide War: <abbr>ACLU</abbr> Warns Senate Against Giving Trump Blank Check to Declare War</a>
+        (YouTube, 11 minutes, 18.04.2018).
+      </li>
       <!--
       <li>
         <a href=""></a>
