Machiavelli: Discourses on Livy.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1229,6 +1229,10 @@
         Oxford University Press, 2008.
         <a href="https://global.oup.com/academic/product/the-prince-9780199535699"><abbr>ISBN</abbr> 9780199535699</a>.
       </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">Discourses on Livy</i>. Translated by Julia Conaway Bondanella and Peter Bondanella. Oxford World's Classics. Oxford University Press, 2008. (448 pages)
+        <a href="https://global.oup.com/academic/product/discourses-on-livy-9780199555550"><abbr>ISBN</abbr> 9780199555550</a>.
+      </li>
       <li>Skinner, Quentin:
         <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
         public lecture at the University of York, 12 February 2013.
